# map_reduce

./: CMakeLists.txt  README.md
api/: CMakeLists.txt  map_reduce_api.hpp
client_example/: CMakeLists.txt  main.cc
client_example/input_data/: doc1.txt  doc16.txt  doc19.txt  doc20.txt  doc6.txt  doc7.txt
client_example/inverted_index/: functions.cc
client_example/word_count/: functions.cc
client_example/word_count/data/: doc0.txt  doc15.txt  doc26.txt
server/: CMakeLists.txt
server/include/: cli.h  communication.h  dynamic_loading.h  error.h  execution.h
server/src/: cli.cc  communication.cc  dynamic_loading.cc  error.cc  execution.cc  main.cc
